--- a/Dark Room/Assembly-CSharp.csproj
+++ b/Dark Room/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\AudioManager.cs" />
      <Compile Include="Assets\InventorySlot.cs" />
      <Compile Include="Assets\InventoryUI.cs" />
      <Compile Include="Assets\Scripts\ChangeScene.cs" />
@@ -65,6 +66,7 @@
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\RayCast.cs" />
      <Compile Include="Assets\Scripts\SettingsManager.cs" />
+     <Compile Include="Assets\Sound.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
