multi tj pas fini
nouvel scène pour le multi + ajout scripts (càd ajout d'un script pour seconde caméra mais à modif et création d'un script Player Controller pour le multi).

--- a/Dark Room/Assembly-CSharp.csproj
+++ b/Dark Room/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
      <Compile Include="Assets\CameraScript.cs" />
      <Compile Include="Assets\InventorySlot.cs" />
      <Compile Include="Assets\InventoryUI.cs" />
+     <Compile Include="Assets\PlayerController_multi.cs" />
      <Compile Include="Assets\Scripts\ChangeScene.cs" />
      <Compile Include="Assets\Scripts\Doors.cs" />
      <Compile Include="Assets\Scripts\FirstPerson.cs" />
