--- a/Dark Room/Dark Room.csproj
+++ b/Dark Room/Dark Room.csproj
@@ -241,38 +241,37 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\ActivateCine.cs" />
-    <Compile Include="Assets\Scripts\AudioManager.cs" />
-    <Compile Include="Assets\Scripts\CameraScript.cs" />
-    <Compile Include="Assets\Scripts\ChangeScene.cs" />
-    <Compile Include="Assets\Scripts\Chest.cs" />
-    <Compile Include="Assets\Scripts\CodeUI.cs" />
-    <Compile Include="Assets\Scripts\DeleteCamera.cs" />
-    <Compile Include="Assets\Scripts\DigitSlot.cs" />
-    <Compile Include="Assets\Scripts\Doors.cs" />
-    <Compile Include="Assets\Scripts\FirstPerson.cs" />
-    <Compile Include="Assets\Scripts\flashlight.cs" />
-    <Compile Include="Assets\Scripts\GameSettings.cs" />
-    <Compile Include="Assets\Scripts\GetCode.cs" />
-    <Compile Include="Assets\Scripts\Inventory.cs" />
-    <Compile Include="Assets\Scripts\InventorySlot.cs" />
-    <Compile Include="Assets\Scripts\InventoryUI.cs" />
-    <Compile Include="Assets\Scripts\KeyTutorial.cs" />
-    <Compile Include="Assets\Scripts\MenuPrincipal.cs" />
-    <Compile Include="Assets\Scripts\Minuteur.cs" />
-    <Compile Include="Assets\Scripts\Pausemenu.cs" />
-    <Compile Include="Assets\Scripts\Pickups.cs" />
-    <Compile Include="Assets\Scripts\PickupTutorial.cs" />
-    <Compile Include="Assets\Scripts\PlayAudio.cs" />
-    <Compile Include="Assets\Scripts\PlayerController.cs" />
-    <Compile Include="Assets\Scripts\PlayerController_multi.cs" />
-    <Compile Include="Assets\Scripts\PlayerMotor_multi.cs" />
-    <Compile Include="Assets\Scripts\PlayerSetup_multi.cs" />
-    <Compile Include="Assets\Scripts\RayCast.cs" />
-    <Compile Include="Assets\Scripts\SettingsManager.cs" />
-    <Compile Include="Assets\Scripts\Sound.cs" />
-    <Compile Include="Assets\Scripts\Tutorial.cs" />
-    <Compile Include="Assets\Scripts\TutorialManager.cs" />
+    <Compile Include="Assets\Scripts\Audio\AudioManager.cs" />
+    <Compile Include="Assets\Scripts\Audio\PlayAudio.cs" />
+    <Compile Include="Assets\Scripts\Audio\Sound.cs" />
+    <Compile Include="Assets\Scripts\Cinematiques\ActivateCine.cs" />
+    <Compile Include="Assets\Scripts\Cinematiques\DeleteCamera.cs" />
+    <Compile Include="Assets\Scripts\Interactives\Chest.cs" />
+    <Compile Include="Assets\Scripts\Interactives\Doors.cs" />
+    <Compile Include="Assets\Scripts\Inventory\Inventory.cs" />
+    <Compile Include="Assets\Scripts\Inventory\InventorySlot.cs" />
+    <Compile Include="Assets\Scripts\Inventory\InventoryUI.cs" />
+    <Compile Include="Assets\Scripts\Menus\ChangeScene.cs" />
+    <Compile Include="Assets\Scripts\Menus\MenuPrincipal.cs" />
+    <Compile Include="Assets\Scripts\Menus\Pausemenu.cs" />
+    <Compile Include="Assets\Scripts\Multijoueur\PlayerController_multi.cs" />
+    <Compile Include="Assets\Scripts\Multijoueur\PlayerMotor_multi.cs" />
+    <Compile Include="Assets\Scripts\Multijoueur\PlayerSetup_multi.cs" />
+    <Compile Include="Assets\Scripts\Options et paramètres\GameSettings.cs" />
+    <Compile Include="Assets\Scripts\Options et paramètres\SettingsManager.cs" />
+    <Compile Include="Assets\Scripts\Pickups\flashlight.cs" />
+    <Compile Include="Assets\Scripts\Pickups\Pickups.cs" />
+    <Compile Include="Assets\Scripts\Player\CameraScript.cs" />
+    <Compile Include="Assets\Scripts\Player\FirstPerson.cs" />
+    <Compile Include="Assets\Scripts\Player\Minuteur.cs" />
+    <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\Player\RayCast.cs" />
+    <Compile Include="Assets\Scripts\Tutorials\KeyTutorial.cs" />
+    <Compile Include="Assets\Scripts\Tutorials\PickupTutorial.cs" />
+    <Compile Include="Assets\Scripts\Tutorials\Tutorial.cs" />
+    <Compile Include="Assets\Scripts\Tutorials\TutorialManager.cs" />
+    <Compile Include="Assets\Scripts\UI\CodeUI.cs" />
+    <Compile Include="Assets\Scripts\UI\DigitSlot.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Models\AdventureForge\CabinetsAndShelvesReadme.txt" />
