Can now pick up light

--- a/Dark Room/Dark Room.csproj
+++ b/Dark Room/Dark Room.csproj
@@ -265,7 +265,7 @@
     <Compile Include="Assets\Scripts\Multijoueur\PlayerSetup_multi.cs" />
     <Compile Include="Assets\Scripts\Options et paramètres\GameSettings.cs" />
     <Compile Include="Assets\Scripts\Options et paramètres\SettingsManager.cs" />
-    <Compile Include="Assets\Scripts\Pickups\flashlight.cs" />
+    <Compile Include="Assets\Scripts\Pickups\Flashlight.cs" />
     <Compile Include="Assets\Scripts\Pickups\Paper.cs" />
     <Compile Include="Assets\Scripts\Pickups\PapersManager.cs" />
     <Compile Include="Assets\Scripts\Pickups\Pickups.cs" />
