--- a/Dark Room/Assembly-CSharp.csproj
+++ b/Dark Room/Assembly-CSharp.csproj
@@ -77,6 +77,7 @@
      <Compile Include="Assets\Scripts\Multijoueur\PlayerController_multi.cs" />
      <Compile Include="Assets\Scripts\Multijoueur\PlayerMotor_multi.cs" />
      <Compile Include="Assets\Scripts\Multijoueur\PlayerSetup_multi.cs" />
+     <Compile Include="Assets\Scripts\Multijoueur\RayCast_multi.cs" />
      <Compile Include="Assets\Scripts\Options et paramètres\GameSettings.cs" />
      <Compile Include="Assets\Scripts\Options et paramètres\SettingsManager.cs" />
      <Compile Include="Assets\Scripts\Pickups\Flashlight.cs" />
