--- a/Dark Room/Assembly-CSharp.csproj
+++ b/Dark Room/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Assets\Bat.cs" />
     <Compile Include="Assets\Cardboard.cs" />
     <Compile Include="Assets\MenuLangage.cs" />
+    <Compile Include="Assets\PauseMenuLanguage.cs" />
     <Compile Include="Assets\Pharmacy.cs" />
     <Compile Include="Assets\PostProcessing\Runtime\Attributes\GetSetAttribute.cs" />
     <Compile Include="Assets\PostProcessing\Runtime\Attributes\MinAttribute.cs" />
