--- a/Dark Room/Dark Room.csproj
+++ b/Dark Room/Dark Room.csproj
@@ -84,9 +84,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Bat.cs" />
-    <Compile Include="Assets\Cardboard.cs" />
-    <Compile Include="Assets\Pharmacy.cs" />
+    <Compile Include="Assets\EndCamera.cs" />
+    <Compile Include="Assets\GameOverUI.cs" />
     <Compile Include="Assets\PostProcessing\Runtime\Attributes\GetSetAttribute.cs" />
     <Compile Include="Assets\PostProcessing\Runtime\Attributes\MinAttribute.cs" />
     <Compile Include="Assets\PostProcessing\Runtime\Attributes\TrackballAttribute.cs" />
@@ -135,6 +134,9 @@
     <Compile Include="Assets\Scripts\Audio\AudioManager.cs" />
     <Compile Include="Assets\Scripts\Audio\PlayAudio.cs" />
     <Compile Include="Assets\Scripts\Audio\Sound.cs" />
+    <Compile Include="Assets\Scripts\Bat.cs" />
+    <Compile Include="Assets\Scripts\Cardboard.cs" />
+    <Compile Include="Assets\Scripts\ChooseKeyUI.cs" />
     <Compile Include="Assets\Scripts\Cinematiques\ActivateCine.cs" />
     <Compile Include="Assets\Scripts\Cinematiques\DeleteCamera.cs" />
     <Compile Include="Assets\Scripts\Interactives\Breaker.cs" />
@@ -153,6 +155,7 @@
     <Compile Include="Assets\Scripts\Inventory\InventorySlot.cs" />
     <Compile Include="Assets\Scripts\Inventory\InventoryUI.cs" />
     <Compile Include="Assets\Scripts\Langage\CodeLanguage.cs" />
+    <Compile Include="Assets\Scripts\MenuLangage.cs" />
     <Compile Include="Assets\Scripts\Menus\ChangeScene.cs" />
     <Compile Include="Assets\Scripts\Menus\MenuPrincipal.cs" />
     <Compile Include="Assets\Scripts\Menus\Pausemenu.cs" />
@@ -161,6 +164,8 @@
     <Compile Include="Assets\Scripts\Multijoueur\PlayerSetup_multi.cs" />
     <Compile Include="Assets\Scripts\Options et paramètres\GameSettings.cs" />
     <Compile Include="Assets\Scripts\Options et paramètres\SettingsManager.cs" />
+    <Compile Include="Assets\Scripts\PauseMenuLanguage.cs" />
+    <Compile Include="Assets\Scripts\Pharmacy.cs" />
     <Compile Include="Assets\Scripts\Pickups\flashlight.cs" />
     <Compile Include="Assets\Scripts\Pickups\Paper.cs" />
     <Compile Include="Assets\Scripts\Pickups\PapersManager.cs" />
@@ -171,12 +176,14 @@
     <Compile Include="Assets\Scripts\Player\Minuteur.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
     <Compile Include="Assets\Scripts\Player\RayCast.cs" />
-    <Compile Include="Assets\Scripts\Tutorials\KeyTutorial.cs" />
-    <Compile Include="Assets\Scripts\Tutorials\PickupTutorial.cs" />
-    <Compile Include="Assets\Scripts\Tutorials\Tutorial.cs" />
-    <Compile Include="Assets\Scripts\Tutorials\TutorialManager.cs" />
     <Compile Include="Assets\Scripts\UI\CodeUI.cs" />
     <Compile Include="Assets\Scripts\UI\DigitSlot.cs" />
+    <Compile Include="Assets\Scripts\UI\Tutorials\KeyTutorial.cs" />
+    <Compile Include="Assets\Scripts\UI\Tutorials\PickupTutorial.cs" />
+    <Compile Include="Assets\Scripts\UI\Tutorials\Tutorial.cs" />
+    <Compile Include="Assets\Scripts\UI\Tutorials\TutorialManager.cs" />
+    <Compile Include="Assets\Seat.cs" />
+    <Compile Include="Assets\SubtitlesLanguage.cs" />
     <Compile Include="Assets\VolumetricLight\Scripts\VolumetricLight.cs" />
     <Compile Include="Assets\VolumetricLight\Scripts\VolumetricLightRenderer.cs" />
     <Compile Include="Assets\VolumetricLight\Standard Assets\Effects\ImageEffects\Scripts\PostEffectsBase.cs" />
